:bug: Fix button mobile color

--- a/src/components/DropdownMenuButton/DropdownMenuButton.css
+++ b/src/components/DropdownMenuButton/DropdownMenuButton.css
@@ -65,6 +65,7 @@ h6 {
   background-color: transparent;
   border: none;
   border-radius: 6px;
+  color: rgb(0, 0, 0);
   display: flex;
   padding: 8px;
 }
