--- a/src/styles/Common.scss
+++ b/src/styles/Common.scss
@@ -63,6 +63,7 @@ h6 {
     background-color: transparent;
     border: none;
     border-radius: 6px;
+    color: $color_text_primary;
     display: flex;
     padding: 8px;
 
